--- a/index.html
+++ b/index.html
@@ -79,21 +79,6 @@
       50% { transform: translateY(-10px); }
     }
 
-    .loading-spinner {
-      width: 50px;
-      height: 50px;
-      border: 4px solid var(--bg-tertiary);
-      border-top: 4px solid var(--accent);
-      border-radius: 50%;
-      animation: spin 1s linear infinite;
-      margin-bottom: 20px;
-    }
-
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-
     .loading-message {
       color: var(--text-secondary);
       font-size: 16px;
@@ -108,21 +93,60 @@
 
     .loading-bar {
       width: 300px;
-      height: 6px;
+      height: 8px;
       background: var(--bg-tertiary);
-      border-radius: 3px;
+      border-radius: 10px;
       overflow: hidden;
+      position: relative;
+      box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.2);
     }
 
     .loading-progress {
       height: 100%;
-      background: linear-gradient(90deg, var(--accent), var(--accent-hover));
+      background: linear-gradient(90deg, var(--accent), var(--accent-hover), var(--accent-light));
       width: 0%;
-      animation: loadAnim 2s linear forwards;
+      border-radius: 10px;
+      position: relative;
+      animation: loadAnim 2s ease-out forwards, shimmer 1.5s infinite;
+      box-shadow: 0 0 10px rgba(147, 51, 234, 0.5);
     }
 
     @keyframes loadAnim {
-      to { width: 100%; }
+      0% { width: 0%; }
+      100% { width: 100%; }
+    }
+
+    @keyframes shimmer {
+      0% { background-position: -200% center; }
+      100% { background-position: 200% center; }
+    }
+
+    .loading-progress::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: linear-gradient(
+        90deg,
+        transparent,
+        rgba(255, 255, 255, 0.3),
+        transparent
+      );
+      animation: shine 2s infinite;
+    }
+
+    @keyframes shine {
+      0% { transform: translateX(-100%); }
+      100% { transform: translateX(100%); }
+    }
+
+    .loading-percentage {
+      margin-top: 15px;
+      font-size: 14px;
+      color: var(--text-secondary);
+      font-weight: 500;
     }
 
     #main-content {
@@ -567,6 +591,11 @@
       animation: spin 1s linear infinite;
     }
 
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
     .top-bar {
       display: flex;
       justify-content: space-between;
@@ -902,11 +931,11 @@
 <body onload="initPage()">
 <div id="loading-screen">
   <img src="Images/AgicLogoNoBg.png" class="loading-logo" alt="Agic Logo" />
-  <div class="loading-spinner"></div>
   <div class="loading-message" id="loadingMessage">Loading awesome games...</div>
   <div class="loading-bar">
     <div class="loading-progress"></div>
   </div>
+  <div class="loading-percentage" id="loadingPercentage">0%</div>
 </div>
 
 <div id="main-content">
@@ -1308,7 +1337,8 @@
     loadingScreen: document.getElementById("loading-screen"),
     featuredContainer: document.getElementById("featuredContainer"),
     featuredTitle: document.getElementById("featuredTitle"),
-    featuredDescription: document.getElementById("featuredDescription")
+    featuredDescription: document.getElementById("featuredDescription"),
+    loadingPercentage: document.getElementById("loadingPercentage")
   };
 
   // Initialize featured games
@@ -1350,6 +1380,9 @@
     const randomMessage = loadingMessages[Math.floor(Math.random() * loadingMessages.length)];
     elements.loadingMessage.textContent = randomMessage;
 
+    // Animate loading percentage
+    animateLoadingPercentage();
+
     // Setup featured game
     updateFeaturedGame();
 
@@ -1377,6 +1410,19 @@
       elements.loadingScreen.style.display = "none";
       document.getElementById("main-content").style.display = "block";
     }, 2200);
+  }
+
+  // Animate loading percentage
+  function animateLoadingPercentage() {
+    let percentage = 0;
+    const interval = setInterval(() => {
+      percentage += Math.random() * 15;
+      if (percentage >= 100) {
+        percentage = 100;
+        clearInterval(interval);
+      }
+      elements.loadingPercentage.textContent = Math.floor(percentage) + '%';
+    }, 200);
   }
 
   // Debounce function for search
