Fix scrolling jitter

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       color: hsl(var(--foreground));
       overflow-x: hidden;
       transition: background-color 0.3s ease, color 0.3s ease;
+      scroll-behavior: smooth;
     }
 
     /* Loading Screen */
@@ -667,6 +668,7 @@
       transition: all 0.2s;
       overflow: hidden;
       background-color: hsl(var(--muted));
+      will-change: transform;
     }
 
     .game:hover {
